--- a/week2_day1.ipynb
+++ b/week2_day1.ipynb
@@ -1038,29 +1038,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 44,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "I googled count, and tried with own logic LOL\n",
+      "2 3 5 7 11 13 17 19 23 29 31 37 41 43 47 53 59 61 67 71 73 79 83 89 97 \n",
+      "After google\n",
       "2 3 5 7 11 13 17 19 23 29 31 37 41 43 47 53 59 61 67 71 73 79 83 89 97 "
      ]
     }
    ],
    "source": [
-    "# sorry, not happy with this at all :( \n",
-    "prime = []\n",
+    "print('I googled count, and tried with own logic LOL')\n",
+    "is_prime = []\n",
     "unefficent_list = []\n",
     "for i in range(1,100):\n",
     "    for x in range(1,100):\n",
     "        if i % x ==0:\n",
     "            unefficent_list.append(i)\n",
     "    if unefficent_list.count(i) <= 2 and unefficent_list.count(i) != 1:\n",
-    "        prime.append(i)\n",
-    "for i in prime:\n",
-    "    print(i, end=' ')"
+    "        is_prime.append(i)\n",
+    "for i in is_prime:\n",
+    "    print(i, end=' ')\n",
+    "\n",
+    "print('\\nAfter google')\n",
+    "for a in range(2,100):\n",
+    "    for b in range(2,100):\n",
+    "        if a % b ==0:\n",
+    "            break\n",
+    "    if a == b:\n",
+    "        print(a, end=' ')"
    ]
   },
   {
@@ -1073,7 +1084,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 199,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [
     {
@@ -1085,13 +1096,16 @@
     }
    ],
    "source": [
-    "age = int(input('How old are you? '))\n",
-    "if age < 18:\n",
-    "    print('kids')\n",
-    "elif age >= 18 and age <= 65:\n",
-    "    print('adults')\n",
-    "else:\n",
-    "    print('seniors')"
+    "try:\n",
+    "    age = int(input('How old are you? '))\n",
+    "    if age < 18:\n",
+    "        print('kids')\n",
+    "    elif age >= 18 and age <= 65:\n",
+    "        print('adults')\n",
+    "    else:\n",
+    "        print('seniors')\n",
+    "except ValueError:\n",
+    "    print('Enter a valid number')"
    ]
   }
  ],
