--- a/week2_day4.ipynb
+++ b/week2_day4.ipynb
@@ -564,6 +564,7 @@
     "                'Salad': 10 \n",
     "            } \n",
     "        }\n",
+    "\n",
     "    def show_menu(self):\n",
     "        print(\"     | Luke's MENU |\")\n",
     "        print(\"|--------Burgers--------\")\n",
@@ -572,6 +573,7 @@
     "        print(\"|--------Sides---------\")\n",
     "        for i,x in enumerate(self.menu['Sides'].items()):\n",
     "            print(f'| {i+3}: {x}')\n",
+    "        print('|\\n| 5: Back\\n')\n",
     "\n",
     "    def show_cart(self):\n",
     "        print('\\n----Your Cart-----')\n",
@@ -599,7 +601,9 @@
     "        else:\n",
     "            print('Please enter a valid number')\n",
     "        print(f'\\n{item} added!\\n')\n",
-    "        self.runner()\n",
+    "        print('--------Want to add anything else?----------')\n",
+    "        self.show_menu()\n",
+    "        self.add_item()\n",
     "\n",
     "    def remove_item(self):\n",
     "        option = str(input('Type Item to Remove (\"b\" for Back) : ')).lower()\n",
@@ -620,16 +624,19 @@
     "        else:\n",
     "            print('Please enter a valid number')\n",
     "        print(f'\\n{item} removed!\\n')\n",
-    "        self.runner()\n",
+    "        print('-------Updated Cart---------')\n",
+    "        self.show_cart()\n",
+    "        print('--------Want to remove anything else?----------')\n",
+    "        self.remove_item()\n",
+    "\n",
     "\n",
     "    def runner(self):\n",
     "        while True:\n",
-    "            option = int(input(\"Welcome to Luke's OOP Burger! | 1: Cart | 2: Add | 3: Remove | 4: Exit | :\"))\n",
+    "            option = int(input(\"Welcome to Luke's Burger! | 1: Cart | 2: Add | 3: Remove | 4: Exit | :\"))\n",
     "            if option == 1:\n",
     "                self.show_cart()\n",
     "            elif option == 2:\n",
     "                self.show_menu()\n",
-    "                print('|\\n| 5: Back\\n')\n",
     "                self.add_item()\n",
     "            elif option == 3:\n",
     "                self.show_cart()\n",
